fix encumbrance taking too much space and bleeding into next line, Fixes #38

--- a/src/styles/scss/forien-armoury.scss
+++ b/src/styles/scss/forien-armoury.scss
@@ -47,7 +47,7 @@
         //font-family: CaslonPro, serif;
         font-family: CaslonAntique, serif;
 
-        .label{
+        .label {
           font-weight: 600;
           font-size: var(--font-size-18);
         }
@@ -119,3 +119,12 @@
   }
 }
 
+.app.window-app.sheet.wfrp4e.actor {
+  .tab.inventory.active {
+    .inventory-header.inventory-container.level-1 {
+      .column-section {
+        max-width: 120px;
+      }
+    }
+  }
+}
